--- a/index.html
+++ b/index.html
@@ -512,6 +512,19 @@ padding: 1.5rem 0;
     ></script>
     <p>
     <img src="https://gateway.pinata.cloud/ipfs/QmYV2wUoVMSHXCjEWNE8TGo2P1zWQ8nULXn5rwCndfEULa" alt="FLO" width="95" height="230">
+      <div
+        data-dh-feature="customContract"
+        data-dh-property-method-id="FVC6"
+        data-dh-property-auto-invoke="true"
+        data-dh-property-contract-name="FLO"
+        data-dh-property-method-name="totalSupply"
+      > 
+            <div
+              data-dh-property-method-id="FVC6"
+              data-dh-property-outputs="true"
+            >
+            </div>
+            <i>o' 100 CLAIMED
     <style>
       form {
         margin: 40px;
