--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ padding: 1.5rem 0;
               data-dh-property-outputs="true"
             >
             </div>
-            <i>o' 100 CLAIMED
+            <i>MINTED BY FLAMINGO_ERS</i>
     <style>
       form {
         margin: 40px;
