--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ padding: 1.5rem 0;
 
 <body>
 <header>
-  <p class = "lex"> 🦩 FLAMINGO <br> MEMBERS <br> ONLY</p>
+  <p class = "lex"> 🦩 FLAMINGO <br> _ERS <br> ONLY</p>
     <button class="button connectButton" data-dh-feature="network" data-dh-property-enable="true">
       <i>Connect</i>
     </button>
