--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ padding: 1.5rem 0;
 
 <body>
 <header>
-  <p class = "lex"> 🦩 FLAMINGO <br> _ERS <br> ONLY</p>
+  <p class = "lex"> 🦩 FLAMINGO <br> _ERS ONLY</p>
     <button class="button connectButton" data-dh-feature="network" data-dh-property-enable="true">
       <i>Connect</i>
     </button>
@@ -524,7 +524,7 @@ padding: 1.5rem 0;
               data-dh-property-outputs="true"
             >
             </div>
-       &nbsp;<li><a href="#"><a class = "link" href ="https://etherscan.io/address/0xc7886c91ff20de17c9161666202b8d8953d03bbd#code">FLAMING_O</a></li>
+       <i><a href="#"><a class = "link" href ="https://etherscan.io/address/0xc7886c91ff20de17c9161666202b8d8953d03bbd#code">FLAMING_O</a></i>
             <i>MINTED BY FLAMINGO_ERS</i>
     <style>
       form {
