--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ padding: 1.5rem 0;
 <header>
   <p class = "lex"> 🦩 FLAMINGO <br> _ERS ONLY</p>
     <button class="button connectButton" data-dh-feature="network" data-dh-property-enable="true">
-      <i>Connect</i>
+      <i>CONNECT</i>
     </button>
   </p>
     <div>
