--- a/index.html
+++ b/index.html
@@ -483,9 +483,7 @@ padding: 1.5rem 0;
 
 <body>
 <header>
-  <a href="https://flamingodao.xyz/">
   <p class = "lex"> 🦩 FLAMINGO <br> _ERS ONLY</p>
-  </a>
     <button class="button connectButton" data-dh-feature="network" data-dh-property-enable="true">
       CONNECT
     </button>
@@ -534,7 +532,7 @@ padding: 1.5rem 0;
             >
             </div>
        <i><a href="#"><a class = "link" href ="https://etherscan.io/address/0xc7886c91ff20de17c9161666202b8d8953d03bbd#code">FLAMING_O</a></i>
-            <i>MINTED BY FLAMINGO_ERS</i>
+            <i>MINTED BY <a href="#"><a class = "link" href ="https://flamingodao.xyz/">FLAMINGO_ERS</a></i>
     <style>
       form {
         margin: 40px;
