--- a/index.html
+++ b/index.html
@@ -526,6 +526,11 @@ padding: 1.5rem 0;
         margin: 40px;
       }
     </style>
+      <p LOOT DROPS ✨/p>
+     <a href = "https://app.rarible.com/collection/0xc7886c91fF20dE17c9161666202b8D8953D03BBD/collectibles">
+    <img class ="img"
+    src="https://app.rarible.com/collection/0x0685a3a451f21d0d864c60c12efe6d74db552d08/collectibles" alt="FLO" width="95" height="230">
+  </a>
 
     <script>
       document.addEventListener(
