--- a/index.html
+++ b/index.html
@@ -526,11 +526,25 @@ padding: 1.5rem 0;
         margin: 40px;
       }
     </style>
-      <p LOOT DROPS ✨/p>
-     <a href = "https://app.rarible.com/collection/0xc7886c91fF20dE17c9161666202b8D8953D03BBD/collectibles">
+    <br>
+    <br>
+       NFT DROPS 🖼️
+       <p>
+     <a href = "https://app.rarible.com/collection/0x0685a3a451f21d0d864c60c12efe6d74db552d08/collectibles">
     <img class ="img"
-    src="https://app.rarible.com/collection/0x0685a3a451f21d0d864c60c12efe6d74db552d08/collectibles" alt="FLO" width="95" height="230">
+    src="https://ipfs.rarible.com/ipfs/QmPqJAqVEXGkMC2dENL3Crv1DhxSuuoizDmTjw2uNVAGiH" alt="FLO" width="95" height="140">
   </a>
+  <br>
+
+  <br>
+    <br>
+       SHARD DROPS ✨
+       <p>
+     <a href = "https://opensea.io/assets/0xa7d8d9ef8d8ce8992df33d8b8cf4aebabd5bd270/3000380">
+    <img class ="img"
+    src="https://lh3.googleusercontent.com/l-jZipmMkZa_8AwwrdomXxahk-JWmMJm3YCFio2Rh0pYwD18ix_ZoASB3L4iueTSBwWntUtyxIGhtHZ_ce-cNuKSa2GYynOelnbJ=s992" alt="FLO" width="95" height="140">
+  </a>
+  <br>
 
     <script>
       document.addEventListener(
